// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should see no expenses 1`] = `
<div>
  <h2>
    Viewing 
    0
     
    expenses
     totaling 
    $0.00
  </h2>
</div>
`;

exports[`Should see one expense totaling $90.00 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totaling 
    $90.00
  </h2>
</div>
`;

exports[`Should see two expenses totaling $94.43 1`] = `
<div>
  <h2>
    Viewing 
    2
     
    expenses
     totaling 
    $94.43
  </h2>
</div>
`;
